operators notes finished

--- a/operators/index.html
+++ b/operators/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>Here we goona learn about the data types in JavaScript</h1>
+    <h1>Here we goona learn about operators in JavaScript</h1>
     <h2>Right click and hit inspect</h2>
     <h2>Go to console to see code running in terminal</h2>
 
